@@ -10,21 +10,22 @@ const run = ({sendMessage, message, messageText, db}) => {
 }
 
 const makeTabooResponse = (sendMessage, words) => {
+	const uniqueWords = [...new Set(words)];
 	sendMessage(
 		'Excuse me, but we do not use the word' +
-		(words.length===1 ? ' ' : 's ') +
-		makeWordList(words) +
+		(uniqueWords.length===1 ? ' ' : 's ') +
+		makeWordList(uniqueWords) +
 		' in this channel.');
 }
 
 const makeWordList = (words) => {
-	const uniqueWords = [...new Set(words.map(word => `"${word}"`))];
-	if (uniqueWords.length === 1) {
-		return uniqueWords[0];
-	} else if (uniqueWords.length === 2) {
-		return uniqueWords[0] + ' or ' + uniqueWords[1];
+	const quotedWords = words.map(word => `"${word}"`);
+	if (quotedWords.length === 1) {
+		return quotedWords[0];
+	} else if (quotedWords.length === 2) {
+		return quotedWords[0] + ' or ' + quotedWords[1];
 	} else {
-		return uniqueWords.slice(0,-1).join(', ') + ', or ' + uniqueWords.slice(-1);
+		return quotedWords.slice(0,-1).join(', ') + ', or ' + quotedWords.slice(-1);
 	}
 }
 		
