@@ -1,3 +1,6 @@
+2020/03/23
+• Minecraft server changes will now properly update the topic.
+• Fixed pluralization error in taboo response.
 2020/03/18
 • Added blackjack functionality.
 2020/01/13
